--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="last_page">Last page</string>
     <string name="pagination_label">%1$d to %2$d of %3$d</string>
     <string name="error_loading_products">Error loading products!</string>
+    <string name="about_this_app">About this app</string>
+    <string name="info_message">Made by Joshua T. Madronio for Serino360\'s Android Kotlin technical exam.</string>
+    <string name="ok">OK</string>
 </resources>
