--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SerinoTest</string>
+    <string name="preference_file_key">%1$s.PREFERENCE_FILE_KEY</string>
     <string name="products">Products</string>
     <string name="first_page">First page</string>
     <string name="previous_page">Previous page</string>
