--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">SerinoTest</string>
     <string name="preference_file_key">%1$s.PREFERENCE_FILE_KEY</string>
     <string name="shared_element_transition_x">shared_element_transition_%1$d</string>
+    <string name="purge_worker_name">%1$s.cache_purger</string>
+    
     <string name="products">Products</string>
     <string name="first_page">First page</string>
     <string name="previous_page">Previous page</string>
